# GoJAX

./: .gitignore  README.md  constants.py  demo.py  go.py  go_constants.py  go_test.py  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
gojax/: __init__.py  constants.py  demo.py  go.py  rng.py  serialize.py  state_index.py  state_info.py
src/gojax/: __init__.py  constants.py  demo.py  go.py  state_info.py
tests/: expected_pretty_string.txt  test_decode_states.py  test_general.py  test_go.py  test_invalid_moves.py  test_piece_removal.py  test_rng.py  test_serialize.py  test_state_index.py
