[metadata]
name = go-jax
version = 0.0.1
author = Eddie Huang
author_email = aigagror@gmail.com
description = The game Go written in JAX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aigagror/GoJAX
project_urls =
    Bug Tracker = https://github.com/aigagror/GoJAX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gojax
packages = find:
python_requires = >=3.6
install_requires =
    jax
    chex

[options.packages.find]
where = gojax